fix(功能用例): 修复用例脑图更新问题